--- a/app/css/style.css
+++ b/app/css/style.css
@@ -219,3 +219,41 @@ img {
   font-size: 1.8rem;
   color: var(--body-color);
 }
+
+/* HOME */
+.home__container {
+  height: 100vh;
+  /* height: calc(100vh - var(--header-height)); 
+  change to this one instead of 100vh*/
+  align-content: center;
+}
+
+.home__title {
+  font-size: var(--biggest-font-size);
+  color: var(--first-color);
+  margin-bottom: var(--mb-1);
+}
+.home__subtitle {
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+  margin-bottom: var(--mb-4);
+}
+
+.home__img {
+  width: 300px;
+  justify-self: center;
+}
+
+/* BUTTONS */
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  transition: 0.3s;
+}
+
+.button:hover {
+  background-color: var(--first-color-alt);
+}
