--- a/app/css/style.css
+++ b/app/css/style.css
@@ -257,3 +257,18 @@ img {
 .button:hover {
   background-color: var(--first-color-alt);
 }
+
+/* ABOUT */
+.about__data {
+  text-align: center;
+}
+
+.about__description {
+  margin-bottom: var(--mb-3);
+}
+
+.about__img {
+  width: 280px;
+  border-radius: 0.5rem;
+  justify-self: center;
+}
