--- a/app/css/style.css
+++ b/app/css/style.css
@@ -162,7 +162,6 @@ img {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
     border-radius: 0 0 1rem 1rem;
     z-index: var(--z-fixed);
-
     display: none;
   }
 }
@@ -199,7 +198,7 @@ img {
 .scrolltop {
   position: fixed;
   right: 1rem;
-  bottom: 1rem;
+  bottom: -20%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -208,7 +207,7 @@ img {
   border-radius: 0.4rem;
   z-index: var(--z-tooltip);
   transition: 0.4s;
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 
 .scrolltop:hover {
@@ -218,6 +217,12 @@ img {
 .scrolltop__icon {
   font-size: 1.8rem;
   color: var(--body-color);
+}
+
+/* Show scrolltop */
+.scroll-top {
+  visibility: visible;
+  bottom: 1.5rem;
 }
 
 /* HOME */
