--- a/app/css/style.css
+++ b/app/css/style.css
@@ -62,6 +62,24 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Variables Dark Theme */
+body.dark-theme {
+  --title-color: #f1f3f2;
+  --text-color: #c7d1cc;
+  --body-color: #1d2521;
+  --container-color: #27302c;
+}
+
+/* Button Dark / Light */
+.change-theme {
+  position: absolute;
+  right: 1rem;
+  top: 1.8rem;
+  color: var(--text-color);
+  font-size: 1rem;
+  cursor: pointer;
+}
+
 body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
@@ -512,6 +530,11 @@ img {
   }
   .nav__toggle {
     display: none;
+  }
+
+  .change-theme {
+    position: initial;
+    margin-left: var(--mb-5);
   }
 
   .home__container {
